tests/test86.rael.exp
Error [1:2]: Expected an expression after left paren
| (
|  ^
